force-app/main/default/objects/AgentConversation__c/AgentConversation__c.object-meta.xml
<CustomObject>
    <description>Audit log for every Agentforce conversation session. Stores transcript, outcome and timing data.</description>
    <label>Agent Conversation</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Agent Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>