force-app/main/default/objects/AgentConversation__c/fields/Messaging_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_User_Id__c</fullName>
    <label>Messaging User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>