force-app/main/default/objects/AgentConversation__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>