force-app/main/default/objects/AgentConversation__c/fields/TestDrive__c.field-meta.xml
<CustomField>
    <fullName>TestDrive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Drive</label>
    <referenceTo>TestDrive__c</referenceTo>
    <relationshipLabel>Agent Conversations</relationshipLabel>
    <relationshipName>AgentConversations</relationshipName>
    <type>Lookup</type>
</CustomField>