force-app/main/default/objects/AgentConversation__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Conversation Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>